# amongus-openenv

./: .dockerignore  .gitignore  Dockerfile.openenv  README.md  app.py  pyproject.toml  requirements.txt
notebooks/: colab_gpu_grpo.py
scripts/: create_hf_space.py
src/amongus_env/: __init__.py  completion_rollout.py  deception_elo.py  deception_leaderboard.py  engine.py  eval_suite.py  golden_episode.py  grpo_smoke.py  grpo_train.py  learned_bots.py  models.py  openenv_server.py  policy_eval.py  reasoning_trace.py  trace.py  training_report.py  trl_adapter.py
tests/: test_completion_rollout.py  test_console_scripts.py  test_create_hf_space.py  test_deception_elo.py  test_deception_leaderboard.py  test_engine.py  test_eval_suite.py  test_golden_episode.py  test_grpo_smoke.py  test_grpo_train.py  test_learned_bots.py  test_models.py  test_openenv_contract.py  test_openenv_http_smoke.py  test_policy_eval.py  test_trace_schema.py  test_training_report.py  test_trl_adapter.py
