[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amongus-openenv"
version = "0.1.0"
description = "A deterministic Among Us-style OpenEnv training environment MVP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openenv[core]>=0.2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
training = [
    "datasets>=2.0",
    "trl>=0.25.0",
]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/amongus_env"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
