[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amongus-openenv"
version = "0.1.0"
description = "A deterministic Among Us-style OpenEnv training environment MVP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "openenv>=0.1.13,<0.2.0",
    "pydantic>=2.0",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
amongus-baseline-eval = "amongus_env.eval_suite:main"
amongus-golden-trace = "amongus_env.golden_episode:main"
amongus-grpo-smoke = "amongus_env.grpo_smoke:main"
amongus-reasoning-trace = "amongus_env.reasoning_trace:main"
amongus-deception-elo = "amongus_env.deception_elo:main"
amongus-deception-leaderboard = "amongus_env.deception_leaderboard:main"
amongus-grpo-train = "amongus_env.grpo_train:main"
amongus-training-report = "amongus_env.training_report:main"
amongus-policy-eval = "amongus_env.policy_eval:main"
amongus-train-learned-bots = "amongus_env.learned_bots:main"

[project.optional-dependencies]
training = [
    "accelerate",
    "datasets>=2.0",
    "torch",
    "transformers",
    "trl>=0.25.0",
]
space = [
    "gradio>=5.0",
]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/amongus_env"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: tests that require optional runtime services or HTTP stacks",
]
